2007-06-22  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed compilation issue when compiled without SQLITE
	  (Merged from trunk r2781)

	- Added support for overloaded directories :
	  package_data_dir package_plugin_dir package_python_plugin_dir

	- Added support for overloaded locale directory

	Removed never used local user plugin directory support (--local_directory)

	* src/boards/py-gcompris-properties.c:
	(pyGcomprisPropertiesType_getattr):
	* src/gcompris/gc_net.c: (gc_net_load_pixmap):
	* src/gcompris/gcompris.c: (load_properties), (main):
	* src/gcompris/menu.c: (gc_menu_load):
	* src/gcompris/properties.c: (gc_prop_new):
	* src/gcompris/properties.h:

2007-06-20  Bruno coudoin  <bruno.coudoin@free.fr>

	* Merged patches from trunk:
	  2691 2692 2693 2694 2695 2696 2697 2698 2699 2700 2701 2702
	  2703 2704 2705 2706 2707 2708 2709 2710 2711 2720 2742 2750
	  2752 2753 2777

2007-05-28  Bruno coudoin  <bruno.coudoin@free.fr>

	- Patch by Hans de Goede fixes running on machines which
	  have / use <prefix>/lib64 instead of <prefix>/lib
	  (merge of trunk r2684)
	- Merge of trunk 2687 (unused image cleanup)

	* src/gcompris/binreloc.c: (gbr_find_lib_dir):
	* configure.in: fixed the gnuchess search path to accept gnome-gnuchess
	                as well. (merge of trunk r2689)


2007-05-28  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/menu2.c: (menu_end), (item_event), (set_content),
	(create_info_area), (display_welcome): changed to use the richtext canvas for all the text
	* src/gcompris/gc_core.h: added the function gc_zoom_factor_get()
	* src/gcompris/gc_net.c: (resize_pixbuf_cb), (gc_net_load_pixmap):
	* src/gcompris/gcompris.c: (test_ccc), (gc_zoom_factor_get),
	(_gc_configure_event_callback), (init_background), (setup_window),
	(main): prepared to support loading images at zoom factor.

2007-05-28  Bruno coudoin  <bruno.coudoin@free.fr>

	- The click on letter activity was only proposing the first 4 letters